--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,9 +27,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:15.0.0'
     implementation 'org.jboss.aerogear:aerogear-otp-java:1.0.0'
     implementation 'com.journeyapps:zxing-android-embedded:3.6.0'
+    implementation 'com.android.volley:volley:1.1.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
 
 
