--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.jettolo.otter">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
@@ -22,6 +23,7 @@
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -35,23 +37,33 @@
         <activity
             android:name=".MainPage"
             android:screenOrientation="portrait" />
-        <activity android:name=".CodeManually" />
-
-        <activity android:name=".MainPage2" />
-
-        <activity android:name=".QRCodeActivity" />
-
-        <service android:name=".MyFirebaseMessagingService">
+        <activity
+            android:name=".CodeManually"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".MainPage2"
+            android:screenOrientation="portrait" >
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+                <action android:name="OPEN_MAINPAGE2" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-        </service>
-        <service android:name=".MyFirebaseInstanceIDService">
+        </activity>
+        <activity
+            android:name=".QRCodeActivity"
+            android:screenOrientation="fullSensor"
+            tools:replace="screenOrientation" />
+
+        <service android:name=".MyFirebaseInstanceIdService">
             <intent-filter>
                 <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
-
+        <service
+            android:name=".MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+            </intent-filter>
+        </service>
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_channel_id"
             android:value="default_channel_id" />
@@ -61,7 +73,6 @@
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_color"
             android:resource="@color/colorSplash" />
-
     </application>
 
 </manifest>
